refactor header code

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <svg class="user-nav__icon">
                     <use xlink:href="img/sprite.svg#icon-user-circle-o"></use>
                 </svg>
-                login
+                <span class="user-nav__login-text">login</span>
             </a>
             <a href="#" class="user-nav__signup-link">
-                sign up
+                <span class="user-nav_signup-text">sign up</span>
             </a>
         </nav>
     </header>
