add img refactor

--- a/index.html
+++ b/index.html
@@ -49,5 +49,22 @@
             </a>
         </nav>
     </header>
+
+    <main class="content"> <!-- WRAPPER bgcolor -->
+        <div class="container"> <!-- max-width shit -->
+            <div class="main-section"> <!--  parent flex --> 
+                <div class="game-view">
+                    
+                </div>
+                <div class="list-view">
+
+                </div>
+            </div>
+            <div class="extra-section">
+
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
