finish square layout

--- a/index.html
+++ b/index.html
@@ -50,18 +50,36 @@
         </nav>
     </header>
 
-    <main class="content"> <!-- WRAPPER bgcolor -->
-        <div class="container"> <!-- max-width shit -->
-            <div class="main-section"> <!--  parent flex --> 
-                <div class="game-view">
-                    
-                </div>
-                <div class="list-view">
+    <main class="content">
+        <div class="game-section">
+            <div class="main-view">
 
+                <div class="slide-square">
+                    <div class="square">
+                        <div class="square__image">
+                            <a href="#" class="square__figure">
+                                <img src="img/header1.jpg" alt="header 1" class="square__photo">
+                            </a>
+                        </div>
+                        <div class="square__title">
+                            <a href="#" class="square__link">dark souls</a>
+                        </div>
+                        <div class="square__info">
+                            <svg class="square__icon">
+                                <use xlink:href="img/sprite.svg#icon-steam"></use>
+                            </svg>
+                            <svg class="square__icon">
+                                <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                            </svg>
+                        </div>
+                    </div>
                 </div>
+
             </div>
-            <div class="extra-section">
 
+
+            <div class="list-view">
+                LIST VIEW
             </div>
         </div>
     </main>
