--- a/index.html
+++ b/index.html
@@ -55,25 +55,32 @@
             <div class="main-view">
 
                 <div class="slide-square">
+
                     <div class="square">
-                        <div class="square__image">
-                            <a href="#" class="square__figure">
-                                <img src="img/header1.jpg" alt="header 1" class="square__photo">
-                            </a>
-                        </div>
-                        <div class="square__title">
-                            <a href="#" class="square__link">dark souls</a>
-                        </div>
+                        <a href="#" class="square__link-photo">
+                            <img src="img/header1.jpg" class="square__photo">
+                        </a>
+                        <a href="#" class="square__link">dark souls prepare to die edition</a>
                         <div class="square__info">
-                            <svg class="square__icon">
-                                <use xlink:href="img/sprite.svg#icon-steam"></use>
-                            </svg>
-                            <svg class="square__icon">
-                                <use xlink:href="img/sprite.svg#icon-windows8"></use>
-                            </svg>
+                            <div class="square__platform">
+                                <svg class="square__icon">
+                                    <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                </svg>
+                                <svg class="square__icon">
+                                    <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                </svg>
+                            </div>
+                            <div class="square__pricing">
+                                <ul class="square__list">
+                                    <li class="square__item">-50%</li>
+                                    <li class="square__item"><a href="#" class="square__price">$69.69</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+
                 </div>
+                
 
             </div>
 
