--- a/index.html
+++ b/index.html
@@ -53,35 +53,68 @@
     <main class="content">
         <div class="game-section">
             <div class="main-view">
-
                 <div class="slide-square">
-
                     <div class="square">
-                        <a href="#" class="square__link-photo">
-                            <img src="img/header1.jpg" class="square__photo">
-                        </a>
-                        <a href="#" class="square__link">dark souls prepare to die edition</a>
-                        <div class="square__info">
-                            <div class="square__platform">
-                                <svg class="square__icon">
+                        <div class="game-thumbnail">
+                            <a href="#" class="game-thumbnail__link">
+                                <img src="img/header1.jpg" class="game-thumbnail__photo">
+                            </a>
+                        </div>
+                        <div class="game-title">
+                            <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                        </div>
+                        <div class="game-info">
+                            <div class="game-info__platform">
+                                <svg class="game-info__icon">
                                     <use xlink:href="img/sprite.svg#icon-steam"></use>
                                 </svg>
-                                <svg class="square__icon">
+                                <svg class="game-info__icon">
                                     <use xlink:href="img/sprite.svg#icon-windows8"></use>
                                 </svg>
                             </div>
-                            <div class="square__pricing">
-                                <ul class="square__list">
-                                    <li class="square__item">-50%</li>
-                                    <li class="square__item"><a href="#" class="square__price">$69.69</a></li>
-                                </ul>
+                        </div>
+                    </div>
+                    <div class="square">
+                        <div class="game-thumbnail">
+                            <a href="#" class="game-thumbnail__link">
+                                <img src="img/header2.jpg" class="game-thumbnail__photo">
+                            </a>
+                        </div>
+                        <div class="game-title">
+                            <a href="#" class="game-title__link">dark souls iii</a>
+                        </div>
+                        <div class="game-info">
+                            <div class="game-info__platform">
+                                <svg class="game-info__icon">
+                                    <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                </svg>
+                                <svg class="game-info__icon">
+                                    <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                </svg>
                             </div>
                         </div>
                     </div>
-
+                    <div class="square">
+                        <div class="game-thumbnail">
+                            <a href="#" class="game-thumbnail__link">
+                                <img src="img/header3.jpg" class="game-thumbnail__photo">
+                            </a>
+                        </div>
+                        <div class="game-title">
+                            <a href="#" class="game-title__link">skyrim special edition</a>
+                        </div>
+                        <div class="game-info">
+                            <div class="game-info__platform">
+                                <svg class="game-info__icon">
+                                    <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                </svg>
+                                <svg class="game-info__icon">
+                                    <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                
-
             </div>
 
 
