finish main-view

--- a/index.html
+++ b/index.html
@@ -72,16 +72,20 @@
                                     <use xlink:href="img/sprite.svg#icon-windows8"></use>
                                 </svg>
                             </div>
+                            <div class="game-info__pricing">
+                                <a href="#" class="game-info__discount">-50%</a>
+                                <a href="#" class="game-info__price">$69.69</a>
+                            </div>
                         </div>
                     </div>
                     <div class="square">
                         <div class="game-thumbnail">
                             <a href="#" class="game-thumbnail__link">
-                                <img src="img/header2.jpg" class="game-thumbnail__photo">
+                                <img src="img/header1.jpg" class="game-thumbnail__photo">
                             </a>
                         </div>
                         <div class="game-title">
-                            <a href="#" class="game-title__link">dark souls iii</a>
+                            <a href="#" class="game-title__link">dark souls prepare to die edition</a>
                         </div>
                         <div class="game-info">
                             <div class="game-info__platform">
@@ -92,16 +96,20 @@
                                     <use xlink:href="img/sprite.svg#icon-windows8"></use>
                                 </svg>
                             </div>
+                            <div class="game-info__pricing">
+                                <a href="#" class="game-info__discount">-50%</a>
+                                <a href="#" class="game-info__price">$69.69</a>
+                            </div>
                         </div>
                     </div>
                     <div class="square">
                         <div class="game-thumbnail">
                             <a href="#" class="game-thumbnail__link">
-                                <img src="img/header3.jpg" class="game-thumbnail__photo">
+                                <img src="img/header1.jpg" class="game-thumbnail__photo">
                             </a>
                         </div>
                         <div class="game-title">
-                            <a href="#" class="game-title__link">skyrim special edition</a>
+                            <a href="#" class="game-title__link">dark souls prepare to die edition</a>
                         </div>
                         <div class="game-info">
                             <div class="game-info__platform">
@@ -111,10 +119,162 @@
                                 <svg class="game-info__icon">
                                     <use xlink:href="img/sprite.svg#icon-windows8"></use>
                                 </svg>
+                            </div>
+                            <div class="game-info__pricing">
+                                <a href="#" class="game-info__discount">-50%</a>
+                                <a href="#" class="game-info__price">$69.69</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="slide-square">
+                        <div class="square">
+                            <div class="game-thumbnail">
+                                <a href="#" class="game-thumbnail__link">
+                                    <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                </a>
+                            </div>
+                            <div class="game-title">
+                                <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                            </div>
+                            <div class="game-info">
+                                <div class="game-info__platform">
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                    </svg>
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                    </svg>
+                                </div>
+                                <div class="game-info__pricing">
+                                    <a href="#" class="game-info__discount">-50%</a>
+                                    <a href="#" class="game-info__price">$69.69</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="square">
+                            <div class="game-thumbnail">
+                                <a href="#" class="game-thumbnail__link">
+                                    <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                </a>
+                            </div>
+                            <div class="game-title">
+                                <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                            </div>
+                            <div class="game-info">
+                                <div class="game-info__platform">
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                    </svg>
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                    </svg>
+                                </div>
+                                <div class="game-info__pricing">
+                                    <a href="#" class="game-info__discount">-50%</a>
+                                    <a href="#" class="game-info__price">$69.69</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="square">
+                            <div class="game-thumbnail">
+                                <a href="#" class="game-thumbnail__link">
+                                    <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                </a>
+                            </div>
+                            <div class="game-title">
+                                <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                            </div>
+                            <div class="game-info">
+                                <div class="game-info__platform">
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                    </svg>
+                                    <svg class="game-info__icon">
+                                        <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                    </svg>
+                                </div>
+                                <div class="game-info__pricing">
+                                    <a href="#" class="game-info__discount">-50%</a>
+                                    <a href="#" class="game-info__price">$69.69</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide-square">
+                            <div class="square">
+                                <div class="game-thumbnail">
+                                    <a href="#" class="game-thumbnail__link">
+                                        <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                    </a>
+                                </div>
+                                <div class="game-title">
+                                    <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                                </div>
+                                <div class="game-info">
+                                    <div class="game-info__platform">
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                        </svg>
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="game-info__pricing">
+                                        <a href="#" class="game-info__discount">-50%</a>
+                                        <a href="#" class="game-info__price">$69.69</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="square">
+                                <div class="game-thumbnail">
+                                    <a href="#" class="game-thumbnail__link">
+                                        <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                    </a>
+                                </div>
+                                <div class="game-title">
+                                    <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                                </div>
+                                <div class="game-info">
+                                    <div class="game-info__platform">
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                        </svg>
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="game-info__pricing">
+                                        <a href="#" class="game-info__discount">-50%</a>
+                                        <a href="#" class="game-info__price">$69.69</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="square">
+                                <div class="game-thumbnail">
+                                    <a href="#" class="game-thumbnail__link">
+                                        <img src="img/header1.jpg" class="game-thumbnail__photo">
+                                    </a>
+                                </div>
+                                <div class="game-title">
+                                    <a href="#" class="game-title__link">dark souls prepare to die edition</a>
+                                </div>
+                                <div class="game-info">
+                                    <div class="game-info__platform">
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-steam"></use>
+                                        </svg>
+                                        <svg class="game-info__icon">
+                                            <use xlink:href="img/sprite.svg#icon-windows8"></use>
+                                        </svg>
+                                    </div>
+                                    <div class="game-info__pricing">
+                                        <a href="#" class="game-info__discount">-50%</a>
+                                        <a href="#" class="game-info__price">$69.69</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
             </div>
 
 
